# Library-management-system

./: .gitignore  Book.cpp  Book.h  BookManager.cpp  BookManager.h  BookManager_test.h  Book_test.h  CMakeLists.txt  Category.cpp  Category.h  Category_test.h  LibraryFacade.cpp  LibraryFacade.h  LibrarySystem.sln  LibrarySystem.vcxproj  LibrarySystem.vcxproj.filters  Media.cpp  Media.h  Media_test.h  README.md  User.cpp  User.h  User_test.h  debtsList.txt  main.cpp  main2  main2.cpp  owedDebts.cpp  owedDebts.h  owedDebts_test.h  passwordList.txt  test2  unit_test.cpp  usernameList.txt
window/: window.h
